<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/buildings_in_night"
             android:padding="@dimen/activity_horizontal_margin"
             tools:context="com.salilgodbole.crossovertest.fragments.VerifyCodeFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48_dp"
        app:cardBackgroundColor="@color/cardview_background"
        app:cardCornerRadius="@dimen/dimen_8_dp"
        app:cardElevation="@dimen/dimen_16_dp"
        app:contentPadding="@dimen/dimen_16_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_8_dp"
                android:text="@string/code_verify_screen_title"
                android:textColor="@color/colorPrimaryLight"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_verification_sent_message"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/verification_code_sent_message"
                android:textColor="@color/textColor"/>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progress_auto_read_otp"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_16_dp"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2_dp"
                android:background="@color/textColor"/>

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_8_dp"
                android:text="@string/verify_code_screen_enter_otp_manually"
                android:textColor="@color/textColor"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_otp"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:gravity="center"
                android:hint="@string/verification_code_screen_edit_otp_hint"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:minWidth="@dimen/dimen_64_dp"
                android:padding="@dimen/dimen_8_dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_verify_code"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:background="@color/colorPrimary"
                android:text="@string/verification_code_screen_btn_verify_code"
                android:textColor="@color/textColor"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_resend_code"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:text="@string/verification_code_screen_btn_resend_otp"
        android:textColor="@color/colorPrimaryLight"/>

</FrameLayout>
