<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buildings_in_night"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.salilgodbole.crossovertest.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48_dp"
        app:cardBackgroundColor="@color/cardview_background"
        app:cardCornerRadius="@dimen/dimen_8_dp"
        app:cardElevation="@dimen/dimen_16_dp"
        app:contentPadding="@dimen/dimen_16_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_8_dp"
                android:text="@string/login_screen_welcome"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_email_id"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/dimen_8_dp"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/prompt_mobile_no"
                android:imeActionId="@+id/login"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textWebEmailAddress"
                android:maxLength="128"
                android:maxLines="1"
                android:minWidth="@dimen/dimen_256_dp"
                android:padding="@dimen/dimen_8_dp"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_password"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dimen_8_dp"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionGo"
                android:inputType="textPassword|textWebPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:minWidth="@dimen/dimen_256_dp"
                android:padding="@dimen/dimen_8_dp"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signin_signup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:layout_marginTop="@dimen/dimen_32_dp"
                android:background="@color/colorPrimary"
                android:textAllCaps="true"
                android:textColor="@color/textColor"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>